# apic

./: pyproject.toml
notebooks/: api.toml  apic_enhanced.ipynb  apic_info_enhanced.ipynb  apic_info_fetch.ipynb  apic_info_load.ipynb  apic_load.ipynb
notebooks/local/: check_outputs.py
notebooks/local/utils/: dbutils_local.py  spark_local.py
